# modbus

./: README.md  app.py  config.py  main.py  modbus_driver.py  pyproject.toml  registers.py  requirements.txt
apps/: dashboard.py
apps/assets/: style.css
tests/: test_client.py  test_integration.py
vsensor/: __init__.py  __main__.py  client.py  config.py  errors.py  models.py  registers.py  transport.py
